--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "boom": "^7.1.1",
     "handlebars": "^4.0.11",
     "handlebars-intl": "^1.1.2",
     "hapi": "^16.6.2",
