--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "handlebars-intl": "^1.1.2",
     "hapi": "^16.6.2",
     "hapi-auth-cookie": "^7.0.0",
+    "hapi-auth-jwt2": "^7.3.0",
     "inert": "^4.2.1",
     "joi": "^13.0.2",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.0-rc1",
     "vision": "^4.1.1"
   }
