--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.0-rc1",
+    "mongoose-seeder": "^1.2.1",
     "vision": "^4.1.1"
   }
 }
