--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "mongoose": "^5.0.0-rc1",
     "mongoose-seeder": "^1.2.1",
     "vision": "^4.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "sync-request": "^4.1.0"
   }
 }
