--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
     "sync-request": "^4.1.0"
+  },
+  "scripts": {
+    "start": "node index"
   }
 }
